1.0.3799.31742 [27may10]
* You guess it: Tyrannis update. Let's hope CCP released correct DB :)
+ Since i was updating DB anyway, i also added Meta Levels column. Enjoy.
+ Clarified error message when Limited API key is provided instead of full one.

1.0.3740.24868 [29mar10]
* Bugfix: "Use quantities" icon shows correct state now (fixed from inverted).
+ "Volume" column displaying item's volume in m3. If you already used the program, 
  column will be in the end. You can rearrange columns by dragging them.
* Bugfix: Totals row no longer show "Loss %" value when prices are unknown
+ Added status bar timer showing when assets can be updated (CCP api-side limitation)
* Added warning when trying to update assets.

1.0.3739.21356 [28mar10]
* Bugfix: Selecting new price type didn't have effect immediately

1.0.3738.52 [26mar10]
+ A button to open whatsnew.txt - see it after the blue question icon on the main toolbar

1.0.3737.43073 [26mar10]
+ A few controls to filter assets: no assembled items, no assembled ships,
  no assembled containers. These are icons next to three combos in the Assets toolbar.
+ Containers are finally out. You can select a container in the third combobox of assets
  toolbar.

1.0.3736.34640 [25mar10]
* Fixed sorting of item names containing quotes

1.0.3736.34313 [25mar10]
+ Market price history period is now configurable in Settings-Other.
* Column sorting time is optimized (it was pretty slow for price columns)
+ New "Loss %" column showing how much you lose when you refine. You can disable any
  unwanted columns in Settings-Appearance.
+ For assets mode, the coloring is now different and is based on absolute ISK loss, not on
  percent loss. This is now configurable in Settings-Appearance.
* Some fixes to sorting columns
* Some fixes to coloring

1.0.3732.8514 [21mar10]
* The app will now start much faster
* Changed market price history from 3 to 14 days. 3 days is a pretty small period,